tests/fixtures/invalid/bytes_sub_bytes.py
# Cannot subtract Bytes from Bytes
x: bytes = b"hello" - b"world"
